# code-scrap

./: .gitignore  CHRONOSPHERE_FULL_SCRAPE_REPORT.md  CLAUDE.md  DOCUMENTATION_INDEX.md  FILES_TO_PUSH.txt  GITHUB_CHECKLIST.md  GITHUB_SETUP.md  NEXT_STEPS.md  PUSH_TO_GITHUB.md  README.md  USER_GUIDE.md  main.py  pipline.py  pyproject.toml  requirements.txt
codescrap/: __init__.py  cache.py  cli.py  config.py  discovery.py  images.py  networking.py  output.py
codescrap/extractors/: __init__.py  html.py  openapi.py  pdf.py
